--- a/style.css
+++ b/style.css
@@ -96,8 +96,9 @@ footer {
   color: white;
   background-color: rgb(20, 20, 94);
   border-top: 0.063rem solid rgb(5, 1, 41);
-  display: grid;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-size: 0.75rem;
   width: 100%;
